<resources>
    <string name="app_name">My-Byk</string>
    <string name="or">OR</string>
    <string name="account">Don\'t have account yet ? <font color="#FF000000"><b><u><i>SignUp</i></u></b></font></string>
    <string name="account_login">Already have account? <font color="#FF000000"><b><u><i>SignIn</i></u></b></font></string>
    <string name="forgot_password"><b><u>Forgot Password ?</u></b></string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rides">Rides</string>
    <string name="wallet">Wallet</string>
    <string name="search_locations">Search locations</string>
    <string name="my_byk"><font color="#FFFFFF">MY</font><font color= "#65EF2B">BYK</font></string>
</resources>