<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_ride_history"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/rides"/>

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/baseline_wallet_24"
        android:title="@string/wallet"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/baseline_person_24"
        android:title="You" />



</menu>