<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tech.my_byk.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_ride_history"
            app:destination="@id/navigation_ride_history" />
    </fragment>

    <fragment
        android:id="@+id/navigation_ride_history"
        android:name="com.tech.my_byk.ui.rideHistory.RideHistoryFragment"
        android:label="History"
        tools:layout="@layout/fragment_ride_history" >
        <action
            android:id="@+id/action_navigation_ride_history_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_ride_history_to_navigation_wallet"
            app:destination="@id/navigation_wallet" />
    </fragment>

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.tech.my_byk.ui.wallet.WalletFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_wallet" >
        <action
            android:id="@+id/action_navigation_wallet_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tech.my_byk.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.tech.my_byk.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

</navigation>